Fixed unbroken strings of text overflowing comments

--- a/app/assets/stylesheets/partials/status-panel.css.scss
+++ b/app/assets/stylesheets/partials/status-panel.css.scss
@@ -305,6 +305,8 @@
 
     p {
       margin: 0;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 
